# evidently

./: .dockerignore  .gitbook.yaml  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AND_REFERENCE.md  COMPLETE_IMPLEMENTATION_EXAMPLE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  ISSUE_1805_RESOLUTION_SUMMARY.md  LEGACY_METRICS_MIGRATION_GUIDE.md  LICENSE  MANIFEST.in  MIGRATION_CHECKLIST.md  MIGRATION_EXAMPLE_ERROR_BIAS_TABLE.py  README.md  README_INDEX.md  SUMMARY.md  biome.jsonc  config.json  config.yaml  core-concepts.md  current.csv  custom_config.yaml  custom_metric.py  data.csv  data_format.json  dev_requirements.txt  example_config.yaml  example_custom_metric.py  example_test.py  examples.md  hatch_build_hook.py  index.html  package.json  pnpm-lock.yaml  pylintrc  pyproject.toml  report.html  requirements.dev.txt  requirements.min.txt  (+10 more)
.devcontainer/: devcontainer.json  on-create.sh
.dvc/: config
.github/scripts/: download_scipy_datasets.py  get-types-from-back.sh  jupyter-to-html.sh  prepare-e2e-metrics-data.sh  support-litestar-openapi-tuples.mjs  transform-jupyter-python.mjs  wait-for-demo-projects.sh
.github/share/: ui-install.yml
.github/workflows/: deploy-artifacts-to-github-pages.yml  docker.yml  examples.yml  gh-pages.yml  main.yml  release.yml  ui.yml
api-reference/: README.md  _pdoc_entrypoint.py  generate.py  local-dev.sh
api-reference/evidently-theme/: custom.css  index.html.jinja2  module.html.jinja2  syntax-highlighting.css  theme.css  version_header.html.jinja2
deploy/helm/: Chart.yaml  values.yaml
docker/: Dockerfile.service  Dockerfile.service.dev  Makefile
docs/: README.md  SUMMARY.md  generate-docs.py  index.html  install-evidently.md
docs/api-reference/: index.html
docs/book/: README.md  SUMMARY.md
docs/ci/: index.html
docs/evidently-theme/: index.html.jinja2  module.html.jinja2  syntax-highlighting.css
docs/evidently-ui-timeline/: index.html
docs/reports/: README.md  data-drift.md  probabilistic-classification-performance.md
docs/step-by-step-guides/: README.md  cli.md  step-by-step-guide-for-jupyter-notebooks.md
docs/support/: README.md
evidently/: README.md  __init__.py  __main__.py  _config.py  _version.py
evidently-tracing/: pyproject.toml
evidently-tracing/evidently/tracing/: __init__.py  client.py
evidently-ui/: package.json  rollup.config.js  tsconfig.json
evidently-ui/src/: App.tsx
evidently/analyzers/: base_analyzer.py  cat_target_drift_analyzer.py  classification_performance_analyzer.py  data_drift_analyzer.py  num_target_drift_analyzer.py  prob_classification_performance_analyzer.py  regression_performance_analyzer.py  test_categorical_target_drift_analyzer.py  test_classification_analyzers.py  test_data_drift_analyzer.py  test_numerical_target_drift_analyzer.py  test_utils.py  utils.py
evidently/analyzes/: base_analyze.py  drift_analyze.py
evidently/dashboard/: dashboard.py
evidently/examples/: bike_sharing_demand_regression_performance.ipynb  bike_sharing_demand_regression_performance_verbose.ipynb  bike_sharing_demand_report_customization.ipynb  boston_data_drift.ipynb  boston_dataset_drift_with_customized_bins.ipynb  boston_target_and_data_drift.ipynb  breast_cancer_data_drift.ipynb  breast_cancer_prob_classification_performance.ipynb  breast_cancer_target_and_data_drift.ipynb  california_housing_drift_with_options.ipynb  iris_classification_performance.ipynb  iris_data_drift.ipynb  iris_probabilistic_classification_performance.ipynb  iris_target_and_data_drift.ipynb  readme.md
evidently/model/: widget.py
evidently/model_monitoring/: __init__.py  data_drift.py  monitoring.py  regression_performance.py
evidently/model_profile/: __init__.py  model_profile.py
evidently/nbextension/: __init__.py
evidently/options/: __init__.py  data_drift.py  test_data_drift.py
evidently/pipeline/: column_mapping.py  pipeline.py  stage.py
evidently/preprocess/: base_preprocess.py  column_mapping.py
evidently/profile/: __init__.py  data_drift_profile.py  profile.py
evidently/profile_parts/: __init__.py  base_profile_part.py  cat_target_drift_profile_part.py  classification_performance_profile_part.py  data_drift_profile_part.py  num_target_drift_profile_part.py  prob_classification_performance_profile_part.py  regression_performance_profile_part.py
evidently/profile_sections/: __init__.py  base_profile_section.py  cat_target_drift_profile_section.py  classification_performance_profile_section.py  data_drift_profile_section.py  num_target_drift_profile_section.py  prob_classification_performance_profile_section.py  regression_performance_profile_section.py  (+1 more)
examples/: Evidently Widget Examples.ipynb  README.md  agentic_systems_tracing.ipynb  classic_ml_validation.ipynb  context_relevance_example.ipynb  data_generators.py  descriptor_list.ipynb  descriptors_showcase.ipynb  example_all_tests.ipynb  future_dashboads.ipynb  list_metrics.ipynb  llm_input_output_validation.ipynb  metric_presets.ipynb  metric_workbench.ipynb  ranking_descriptor_example.ipynb  readme.md  report_example.ipynb  synth_data.py  test_suite_example.ipynb  tests_and_test_presets.ipynb
monitoring_service/: Dockerfile  app.py  config.yaml  docker-compose.yml  example_run_request.py  prepare_datasets.py  requirements.txt  test_request.py
reports/: categorical-target-drift.md  num-target-drift.md  probabilistic-classification-performance.md  reg-performance.md
scripts/: metric_fields_gdoc.py
support/: contact.md  f.a.q..md
test_data/: .gitignore  20news-bydate_py3.pkz.dvc  adults.CITATION  adults.parquet  bike_sharing_dataset.CITATION  cal_housing_py3.pkz  lfw-dataset.zip.dvc
tests/: analyze_pytest_result.py  conftest.py  test_core.py  test_metric_results.py  test_old_imports.py  test_pydantic_aliases.py  test_pydantic_compat.py  test_readme_examples.py  test_setup.py  test_torch_numpy.py  test_utils.py
ui/: .gitignore  .prettierrc  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replace-playwright-screens.mjs  tsconfig.base.ui.json  tsconfig.json  webpack.config.js
(+7963 files in other folders)
