[metadata]
name = evidently
version = attr: evidently._version.__version__
description = Open-source tools to analyze, monitor, and debug machine learning model in production.
author = Emeli Dral
author_email = emeli.dral@gmail.com
url = https://github.com/evidentlyai/evidently
licence = Apache License 2.0
license_file = LICENSE
platforms = Linux, Mac OS X, Windows

[options]
python_requires = >= 3.6
include_package_data = true
packages = find:
package_dir =
    =src

[options.packages.find]
where = src


[flake8]
ignore = E501,F401,W503,W504
max-line-length = 140
per-file-ignores =
     src/evidently/tabs/__init__.py: F403
     src/evidently/profile_sections/__init__.py: F403
     src/evidently/widgets/__init__.py: F403

[mypy]
files = src/evidently
python_version = 3.6

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.stats]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[tool:pytest]
testpaths =
    tests
