[metadata]
name = evidently
version = attr: evidently._version.__version__
description = Open-source tools to analyze, monitor, and debug machine learning model in production.
author = Emeli Dral
author_email = emeli.dral@gmail.com
url = https://github.com/evidentlyai/evidently
licence = Apache License 2.0
license_file = LICENSE
platforms = Linux, Mac OS X, Windows

[options]
python_requires = >= 3.7
include_package_data = true
packages = find:
package_dir =
    =src

[options.packages.find]
where = src


[flake8]
ignore = E501,W503,W504,E203
max-line-length = 140
per-file-ignores =
     src/evidently/tabs/__init__.py: F403
     src/evidently/profile_sections/__init__.py: F403
     src/evidently/widgets/__init__.py: F403

[mypy]
show_error_codes = True
files = src/evidently
python_version = 3.7
disable_error_code = misc

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-umap.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-iterative_telemetry.*]
ignore_missing_imports = True

[mypy-fastapi_restful.*]
ignore_missing_imports = True

[mypy-watchdog.*]
ignore_missing_imports = True

[mypy-pydantic.v1.*]
ignore_missing_imports = True

[mypy-pyspark.*]
ignore_missing_imports = True

[mypy-idna.*]
ignore_missing_imports = True

[mypy-fsspec.*]
ignore_missing_imports = True

[tool:pytest]
testpaths=tests
python_classes=*Test

[black]
line-length = 120
target-version = py37

[isort]
profile = black
py_version = 37
src_paths = src,tests,examples
honor_noqa = true
line_length = 120
force_single_line = true
known_first_party = evidently
