[metadata]
name = evidently
version = attr: evidently._version.__version__
description = Open-source tools to analyze, monitor, and debug machine learning model in production.
author = Emeli Dral
author_email = emeli.dral@gmail.com
url = https://github.com/evidentlyai/evidently
licence = Apache License 2.0
license_file = LICENSE
platforms = Linux, Mac OS X, Windows

[options]
python_requires = >= 3.8
include_package_data = true
packages = find:
package_dir =
    =src

[options.packages.find]
where = src


[mypy]
show_error_codes = True
files = src/evidently
python_version = 3.8
disable_error_code = misc

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True
follow_imports = skip

[mypy-evaluate.*]
ignore_missing_imports = True

[mypy-openai.*]
ignore_missing_imports = True

[mypy-sentence_transformers.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-umap.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-iterative_telemetry.*]
ignore_missing_imports = True

[mypy-fastapi_restful.*]
ignore_missing_imports = True

[mypy-watchdog.*]
ignore_missing_imports = True

[mypy-pydantic.v1.*]
ignore_missing_imports = True

[mypy-pyspark.*]
ignore_missing_imports = True

[mypy-idna.*]
ignore_missing_imports = True

[mypy-fsspec.*]
ignore_missing_imports = True

[mypy-dynaconf.*]
ignore_missing_imports = True

[mypy-litestar.*]
ignore_missing_imports = True

[mypy-typing_inspect.*]
ignore_missing_imports = True

[mypy-ujson.*]
ignore_missing_imports = True

[tool:pytest]
testpaths=tests
python_classes=*Test
markers:
    slow: slow tests
